    option has not been given. (robs)
  o Fix synth length accuracy. (robs)
  o Fix broken audio when downmixing with any of the following
    effects: synth, deemph, vibro. (robs)
  o Fix wav file handler discarding the last PCM sample in certain
    circumstances. (robs)
  o Add support for 24-bit PCM raw, wav (WAVE_FORMAT_EXTENSIBLE) [FR# 801015],
    au, aiff, & flac files. (robs)
  o Added alias -1 (for -b), -2 (for -w), -4 (for -l), -8 (for -d). (robs)
  o Remove old, optional rate change and alaw/ulaw conversion code.
    (Reuben Thomas)
  o Make sox and soxmix a single binary.  (Reuben Thomas)
  o Consistent (and hopefully complete) clipping detection and
    reporting.  (robs)
  o Add AIFF-C output support.  (shashimoto)
  o -V now gives only user-relevant messages, use -V -V to get
    developer-relevant messages.  (robs)
  o Old and new rate code removed; the "rate" effect is implemented
    for backwards compatibility by "resample".
  o Preview mode now removed, as all it did was use rate rather than
    resample, and rate has been removed.
  o Improved synth usage (by introducing -n option) and improved synth
    entry in the man-page.  (robs)
  o Documented the butterworth filter effects.  (robs)
  o Added command line options for specifying the output file
    comment.  (robs)
  o Improved the accuracy of integer and floating point PCM
    conversions.  (robs)
  o Added large file support.  (Reuben Thomas)
  o Higher quality audio speed adjustment.  (robs)
  o Added ability to merge e.g. 2 mono files to 1 stereo file
    [FR# 1297076].  (robs)
  o Several effects are now optimised in situations where they need
    do nothing, e.g. changing rate from 8000 to 8000, or changing volume
    by 0dB [Bug# 1395781].  (robs)

sox-12.18.2
-----------
  o Adding in Debian's disk full fix (#313206).
  o Finally got rid of reference to cleanup() function in
    library.  Applications are now required to detect