@@ -66,7 +66,7 @@ The sound effects include:
   o Apply a high-pass filter
   o Apply a low-pass filter
   o Apply an equalizer effect
-  o Add masking noise to a signal
+  o Add dithering/masking noise to a signal
   o Multi-band compander
   o Pan sound between channels
   o Apply a phaser effect
